feature(id-to-class): change nav and ul id to class name and add class footer to footer [starts #165410057]

--- a/UI/index.html
+++ b/UI/index.html
@@ -5,13 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/reset.css" type="text/css">
+	<link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 <body>
 
-	<nav id="navigation" role="navigation">
+	<nav class="navigation" role="navigation">
 		<a href="#"><img src="images/logo.png" alt="logo" role="banner"></a>
 
-		<ul id="menu">
+		<ul class="menu">
 			<li><a href="#">Sign Up</a></li>
 		</ul>
 	</nav>
@@ -25,7 +26,7 @@
 		<a href="#" class="btn">Get Loan</a>
 	</div>
 
-	<footer role="contentinfo">
+	<footer class="footer" role="contentinfo">
 		<p>&copy; 2019 Quick Credit</p>
 	</footer>
 </body>
