feature(landingpage-styles): add styles specific to landing page [finishes #165410057]

--- a/UI/index.html
+++ b/UI/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/reset.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/layout.css">
 	<link rel="stylesheet" type="text/css" href="css/typography.css">
+	<link rel="stylesheet" type="text/css" href="css/landingpagestyles.css">
 </head>
 <body>
 
