feature(add-links): add signin and signup links to homepage [fininishes #165410057]

--- a/UI/index.html
+++ b/UI/index.html
@@ -4,6 +4,7 @@
 	<title>Quick Credit</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
+	<link rel="icon" type="image/ico" href="images/logoicon.png" />
 	<link rel="stylesheet" href="css/reset.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/layout.css">
 	<link rel="stylesheet" type="text/css" href="css/typography.css">
@@ -12,10 +13,10 @@
 <body>
 
 	<nav class="navigation" role="navigation">
-		<a href="#"><img class="logo" src="images/logo.png" alt="logo" role="banner"></a>
+		<a href="index.html"><img class="logo" src="images/logo.png" alt="logo" role="banner"></a>
 
 		<ul class="menu">
-			<li><a href="#">Sign Up</a></li>
+			<li><a href="signup.html">Sign Up</a></li>
 		</ul>
 	</nav>
 
@@ -25,7 +26,7 @@
 	</div>
 
 	<div id="getloan">
-		<a href="#" class="btn">Get Loan</a>
+		<a href="signin.html" class="btn">Get Loan</a>
 	</div>
 
 	<footer class="footer" role="contentinfo">
