feature(formstyles): add css to style forms [finishes #165409398]

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/layout.css">
 	<link rel="stylesheet" type="text/css" href="css/typography.css">
 	<link rel="stylesheet" type="text/css" href="css/navbarlayout.css">
+	<link rel="stylesheet" type="text/css" href="css/formstyles.css">
 </head>
 <body>
 
@@ -32,7 +33,7 @@
 			<input type="password" name="password" placeholder="Password">
 		</label>
 		<label>
-			<input type="submit" value="Sign In">
+			<input class="submitbtn" type="submit" value="Sign In">
 		</label>
 		<p>New to Quick Credit? <a href="signup,html">Sign Up</a></p>
 	</form>
