feature(user-admin-profile): add links to html to user profile and admin to simulate functionality [finishes #165409398]

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -17,7 +17,7 @@
 		<a href="index.html"><img src="images/logo.png" alt="logo" role="banner"></a>
 
 		<ul class="menu">
-			<li><a href="signup.html">Sign Up</a></li>
+			<li><a href="adminprofile.html">Admin</a></li>
 		</ul>
 	</nav>
 
@@ -32,9 +32,7 @@
 			<p>Password</p>
 			<input type="password" name="password" placeholder="Password">
 		</label>
-		<label>
-			<input class="submitbtn" type="submit" value="Sign In">
-		</label>
+		<a href="userprofile.html" class="submitbtn">Sign In</a>
 		<p>New to Quick Credit? <a href="signup,html">Sign Up</a></p>
 	</form>
 
