--- a/UI/signin.html
+++ b/UI/signin.html
@@ -17,7 +17,7 @@
 		<a href="index.html"><img src="images/logo.png" alt="logo" role="banner"></a>
 
 		<ul class="menu">
-			<li><a href="adminprofile.html">Admin</a></li>
+			<li><a href="adminsignin.html">Admin</a></li>
 		</ul>
 	</nav>
 
