bug(typing-mistake): correct link in form a element in sign in form [fixes #165409398]

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -33,7 +33,7 @@
 			<input type="password" name="password" placeholder="Password">
 		</label>
 		<a href="userprofile.html" class="submitbtn">Sign In</a>
-		<p>New to Quick Credit? <a href="signup,html">Sign Up</a></p>
+		<p>New to Quick Credit? <a href="signup.html">Sign Up</a></p>
 	</form>
 
 	<footer>
