feature(styles): add styles to view specific loan application [finishes #165591638]

--- a/UI/admin/viewspecificloan.html
+++ b/UI/admin/viewspecificloan.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/typography.css">
 	<link rel="stylesheet" type="text/css" href="css/dashboardstyles.css">
 	<link rel="stylesheet" type="text/css" href="../css/tablestyles.css">
+	<link rel="stylesheet" type="text/css" href="css/specificloanstyles.css">
 </head>
 <body>
 	<div class="header">
