--- a/UI/userprofile.html
+++ b/UI/userprofile.html
@@ -16,9 +16,15 @@
 	<nav class="navigation" role="navigation">
 		<a href="index.html"><img src="images/logo.png" alt="logo" role="banner"></a>
 
-		<ul class="menu">
-			<li><a href="index.html">Log Out</a></li>
-		</ul>
+		<div class="menu">
+			<label for="toggle">Menu</label>
+			<input type="checkbox" id="toggle"/>
+			<ul class="menu-bar">
+				<li><a href="userprofile.html">Request loan</a></li>
+				<li><a href="loanhistory.html">Loan History</a></li>
+				<li><a href="index.html">Log Out</a></li>
+			</ul>
+		</div>
 	</nav>
 
 	<form action="#" class="slidecontainer">
@@ -28,7 +34,6 @@
 		<p>Term</p>
 		<input type="range" min="1" max="30" id="term" value="0">
 		<a href="loansubmit.html" class="submitbtn">Apply</a>
-		<p><a href="loanhistory.html">View Loan History</a></p>
 	</form>
 
 	<footer>
