--- a/UI/userprofile.html
+++ b/UI/userprofile.html
@@ -10,21 +10,19 @@
 	<link rel="stylesheet" type="text/css" href="css/typography.css">
 	<link rel="stylesheet" type="text/css" href="css/navbarlayout.css">
 	<link rel="stylesheet" type="text/css" href="css/applyloanstyles.css">
+	<link rel="stylesheet" type="text/css" href="css/togglemenustyles.css">
 </head>
 <body>
 
 	<nav class="navigation" role="navigation">
 		<a href="index.html"><img src="images/logo.png" alt="logo" role="banner"></a>
-
-		<div class="menu">
-			<label for="toggle">Menu</label>
-			<input type="checkbox" id="toggle"/>
-			<ul class="menu-bar">
-				<li><a href="userprofile.html">Request loan</a></li>
-				<li><a href="loanhistory.html">Loan History</a></li>
-				<li><a href="index.html">Log Out</a></li>
-			</ul>
-		</div>
+		
+		
+		<ul class="menu">
+			<li><a href="userprofile.html">Request Loan</a></li>
+			<li><a href="loanhistory.html">Loan History</a></li>
+			<li><a href="index.html">Log Out</a></li>
+		</ul>
 	</nav>
 
 	<form action="#" class="slidecontainer">
