--- a/UI/userprofile.html
+++ b/UI/userprofile.html
@@ -31,7 +31,7 @@
 		<input type="range" min="1" max="50000" step="1000" id="amount" value="0">
 		<p>Term</p>
 		<input type="range" min="1" max="30" id="term" value="0">
-		<a href="loansubmit.html" class="submitbtn">Apply</a>
+		<a href="loansent.html" class="submitbtn">Apply</a>
 	</form>
 
 	<footer>
