ft(admin-login): add checkbox to allow admin sign up [finishes #166030374]

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -17,7 +17,7 @@
 		<a href="index.html"><img src="images/logo.png" alt="logo" role="banner"></a>
 
 		<ul class="menu">
-			<li><a href="admin/dashboard.html">Admin</a></li>
+			<li><a href="index.html">Home</a></li>
 		</ul>
 	</nav>
 
@@ -32,6 +32,8 @@
 			<p>Password</p>
 			<input type="password" name="password" placeholder="Password">
 		</label>
+		<label for="admin-check">Sign In as Admin?</label>
+		<input type="checkbox" name="isAdmin" value="true"/> 
 		<a href="userprofile.html" class="submitbtn">Sign In</a>
 		<p>New to Quick Credit? <a href="signup.html">Sign Up</a></p>
 	</form>
